# bsh-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  rustfmt.toml  rustnightly.txt
.github/workflows/: bsh_ci.yml
ci/: script.sh
scripts/: dev_setup.sh  generate_code_coverage.sh
scripts/git-hooks/: pre-commit
src/: editor.rs  error.rs  errors.rs  execute_command.rs  history.rs  job_control.rs  jobs.rs  lib.rs  main.rs  parse.rs  shell.rs
src/builtins/: dirs.rs  env.rs  exit.rs  help.rs  history.rs  jobs.rs  kill.rs  mod.rs
src/core/: intermediate_representation.rs  job.rs  mod.rs  variable_expansion.rs
src/core/parser/: ast.rs  grammar.lalrpop  mod.rs
src/parser/: ast.rs  grammar.lalrpop  mod.rs
src/shell/: editor.rs  execute_command.rs  job_control.rs  mod.rs  shell.rs  unix.rs
src/shell/builtins/: dirs.rs  env.rs  exit.rs  help.rs  history.rs  jobs.rs  kill.rs  mod.rs
src/util/: mod.rs  unix.rs
tests/: integration_tests.rs  test_integration.rs  workdir.rs
tests/fixtures/scripts/: redirect.bsh  simple_exit_error.bsh  simple_exit_large.bsh  simple_exit_negative.bsh  simple_pipeline.bsh
