[package]
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
build = "build.rs"
description = "Command line shell"
edition = "2018"
license = "MIT or Apache-2.0"
name = "bsh"
readme = "README.md"
version = "0.1.0"

[[bin]]
name = "bsh"
path = "src/bin/bsh.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
atty = "0.2.11"
cfg-if = "1.0.0"
dirs = "4.0.0"
docopt = "1.0.2"
failure = "0.1.5"
fern = "0.6.0"
lalrpop-util = "0.19.6"
libc = "0.2.50"
log = "0.4.6"
nix = "0.22.0"
regex = "1.1.2"
rustyline = "9.0.0"
serde = "1.0.89"
serde_derive = "1.0.89"

[dev-dependencies]
assert_cmd = "2.0.1"
chrono = "0.4.6"
escargot = "0.5.2"
lazy_static = "1.3.0"
predicates = "2.0.0"
tempfile = "3.0.7"
