[package]
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
build = "build.rs"
description = "Command line shell"
edition = "2018"
license = "MIT or Apache-2.0"
name = "bsh"
readme = "README.md"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
atty = "0.2.14"
cfg-if = "1.0.0"
dirs = "4.0.0"
docopt = "1.1.1"
failure = "0.1.8"
fern = "0.6.0"
lalrpop-util = "0.19.6"
libc = "0.2.102"
log = "0.4.14"
nix = "0.22.1"
regex = "1.5.5"
rustyline = "9.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"

[dev-dependencies]
assert_cmd = "2.0.1"
chrono = "0.4.19"
escargot = "0.5.2"
lazy_static = "1.4.0"
predicates = "2.0.2"
tempfile = "3.2.0"
